# Memoo

./: .env.template  .gitignore  Makefile  README.md  cloudbuild.yaml  docker-compose.yml  package-lock.json  package.json
apps/agent/: Dockerfile  package-lock.json  package.json  server.mjs
apps/api/: .dockerignore  .env.example  Dockerfile  Dockerfile.prod  README.md  pyproject.toml
apps/api/app/: main.py
apps/api/app/api/: routes.py
apps/api/app/core/: config.py
apps/api/app/db/: __init__.py  session.py
apps/api/app/models/: entities.py
apps/api/app/schemas/: entities.py
apps/api/app/services/: __init__.py  automation_engine.py  gemini_compile.py  gemini_live.py  playwright_executor.py  run_engine.py  sandbox_executor.py  storage.py
apps/api/memoo_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api/scripts/: seed_demo.py
apps/sandbox/: Dockerfile  entrypoint.sh  healthcheck.py
apps/video/: README.md  package.json  tsconfig.json
apps/video/src/: MemooBrandStory.tsx  Root.tsx  fonts.ts  index.ts  theme.ts
apps/web/: Dockerfile  Dockerfile.prod  README.md  entrypoint.sh  next.config.ts  package-lock.json  package.json  patch_auto.py  patch_framer.py
apps/web/scripts/: generate-banner-gif.mjs
apps/web/src/: middleware.ts
docs/: architecture-diagrams.md  gemini-live-agent-challenge.md  project.md
infra/diagrams/: ARCHITECTURE.md  README.md  architecture.py  requirements.txt
infra/terraform/gcp/: .terraform.lock.hcl  README.md  apis.tf  artifact_registry.tf  (+13 more)
scripts/gcp/: bootstrap_tf_state.sh  build_and_push.sh  deploy.sh
(+57 files in other folders)
