[project]
name = "memoo-api"
version = "0.1.0"
description = "memoo platform backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.35.0",
  "sqlalchemy>=2.0.43",
  "asyncpg>=0.30.0",
  "miniopy-async>=1.22.0",
  "pydantic>=2.11.0",
  "email-validator>=2.2.0",
  "pydantic-settings>=2.10.0",
  "python-dotenv>=1.1.0",
  "python-multipart>=0.0.20",
  "bcrypt>=4.3.0",
  "google-genai>=1.14.0",
  "playwright>=1.52.0",
  "httpx>=0.27.0",
  "google-cloud-storage>=3.4.1",
]

[tool.uv]
dev-dependencies = [
  "ruff>=0.12.10",
]

[tool.ruff]
line-length = 100
